latest asr, nlp and vlm model updates

--- a/asr/requirements.txt
+++ b/asr/requirements.txt
@@ -1,6 +1,15 @@
-transformers==4.31.0
 librosa==0.10.1
 fastapi
 accelerate
 uvicorn[standard]
 pandas==2.0.3
+torch==2.2.0
+transformers
+soundfile
+scipy
+noisereduce==2.0.1
+numpy
+audiomentations
+datasets
+torchaudio
+sentencepiece
